# arduino-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/toolchain/: avr.cmake
docker/avr/: Dockerfile
docker/jenkins/: Dockerfile
scripts/: build_and_deploy_local.sh  build_local.sh  build_with_docker.sh  cmake_build.sh  deploy.sh  docker_build_avr.sh  docker_build_jenkins.sh  run_jenkins_docker.sh
src/: CMakeLists.txt  demo.cxx  demo.hxx  main.cxx
test/: CMakeLists.txt
test/catch2/: CMakeLists.txt  catch_main.cxx
test/unittests/: CMakeLists.txt  demo_tests.cxx
